--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,8 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - "./nginx.conf:/etc/nginx/nginx.conf" # Chemin corrigé
+      # - "./nginx.conf:/etc/nginx/nginx.conf" # Chemin corrigé
+      - "./nginx.conf:/etc/nginx/conf.d/default.conf" # Chemin corrigé
       - "nginx-logs:/var/log/nginx"
     ports:
       - "9393:9090" # Exposition de Nginx pour Prometheus
