--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,11 @@ services:
     image: prom/prometheus:latest
     networks:
       - monitoring
-    # volumes:
-    # - "prometheus-data:/prometheus"
-    # - "./prometheus.yaml:/etc/prometheus/prometheus.yaml"
-    # command:
-    # - "--config.file=/etc/prometheus/prometheus.yaml"
+    volumes:
+      # - "prometheus-data:/prometheus"
+      - "./prometheus.yaml:/etc/prometheus/prometheus.yaml"
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yaml"
     # - "--storage.tsdb.path=/prometheus"
     # - "--storage.tsdb.retention.time=200h"
     privileged: true
