--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,10 @@ services:
       - "./prometheus.yaml:/etc/prometheus/prometheus.yaml"
     command:
       - "--config.file=/etc/prometheus/prometheus.yaml"
-    # - "--storage.tsdb.path=/prometheus"
-    # - "--storage.tsdb.retention.time=200h"
+      # - "--storage.tsdb.path=/prometheus"
+      # - "--storage.tsdb.retention.time=200h"
+      - "--web.enable-lifecycle"
+
     privileged: true
     depends_on:
       - cadvisor
