--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
       - monitoring
     volumes:
       # - "prometheus-data:/prometheus"
-      - "./prometheus.yml:/etc/prometheus/prometheus.yml"
+      - "./prometheus.yaml:/etc/prometheus/prometheus.yaml"
     command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--config.file=/etc/prometheus/prometheus.yaml"
       # - "--storage.tsdb.path=/prometheus"
       # - "--storage.tsdb.retention.time=200h"
       - "--web.enable-lifecycle"
