--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -8,12 +8,13 @@ scrape_configs:
     # metrics_path defaults to '/metrics'
     static_configs:
       - targets: ["localhost:9090"]
-  - job_name: "cadvisor"
-    scrape_interval: 5s
-    static_configs:
-      - targets: ["cadvisor:8080"]
 
-  - job_name: "nginx"
-    scrape_interval: 5s
-    static_configs:
-      - targets: ["nginx:80"]
+  # - job_name: "cadvisor"
+  #   scrape_interval: 5s
+  #   static_configs:
+  #     - targets: ["cadvisor:8080"]
+
+  # - job_name: "nginx"
+  #   scrape_interval: 5s
+  #   static_configs:
+  #     - targets: ["nginx:80"]
