--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - monitoring
     volumes:
       # - "prometheus-data:/prometheus"
-      - "./prometheus.yml:/etc/prometheus/prometheus.yml"
+      # - "./prometheus.yml:/etc/prometheus/prometheus.yml"
     command:
       # - "--config.file=/etc/prometheus/prometheus.yml"
       # - "--storage.tsdb.path=/prometheus"
