--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
     image: prom/prometheus:latest
     networks:
       - monitoring
-    volumes:
-      # - "prometheus-data:/prometheus"
-      # - "./prometheus.yml:/etc/prometheus/prometheus.yml"
+    # volumes:
+    # - "prometheus-data:/prometheus"
+    # - "./prometheus.yml:/etc/prometheus/prometheus.yml"
     command:
       # - "--config.file=/etc/prometheus/prometheus.yml"
       # - "--storage.tsdb.path=/prometheus"
