--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,11 @@ services:
     # volumes:
     # - "prometheus-data:/prometheus"
     # - "./prometheus.yml:/etc/prometheus/prometheus.yml"
-    command:
-      # - "--config.file=/etc/prometheus/prometheus.yml"
-      # - "--storage.tsdb.path=/prometheus"
-      # - "--storage.tsdb.retention.time=200h"
-      - "--web.enable-lifecycle"
+    # command:
+    # - "--config.file=/etc/prometheus/prometheus.yml"
+    # - "--storage.tsdb.path=/prometheus"
+    # - "--storage.tsdb.retention.time=200h"
+    # - "--web.enable-lifecycle"
 
     privileged: true
     depends_on:
