--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     # - "--storage.tsdb.path=/prometheus"
     # - "--storage.tsdb.retention.time=200h"
     # - "--web.enable-lifecycle"
+    ports:
+      - "9090:9090"
 
     privileged: true
     depends_on:
