--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     # - "--storage.tsdb.retention.time=200h"
     # - "--web.enable-lifecycle"
     command:
-      - --config.file=/etc/prometheus/prometheus.yml
+      - "--config.file=/etc/prometheus/prometheus.yml"
     volumes:
       - "./prometheus.yml:/etc/prometheus/prometheus.yml:ro"
     ports:
