--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,98 @@
-version: "2"
+version: "3"
 services:
-  traefik:
-    image: traefik
-    hostname: traefik
-    container_name: traefik
-    command: -c /etc/traefik/traefik.toml
-    ports:
-      # - "80:80"
-      - "443:443"
+  cadvisor:
+    container_name: cadvisor
+    image: gcr.io/cadvisor/cadvisor:latest
+    networks:
+      - monitoring
     volumes:
-      - "/data/traefik/traefik.toml:/etc/traefik/traefik.toml"
-      - "/data/traefik/acme.json:/etc/traefik/acme.json"
-      - "/data/traefik/ssl:/etc/traefik/ssl"
-      - "/var/run/docker.sock:/var/run/docker.sock"
+      # - "/:/rootfs"
+      # - "/var/run:/var/run"
+      # - "/sys:/sys"
+      # - "/var/lib/docker/:/var/lib/docker"
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - "/dev/disk/:/dev/disk:rw"
+
+    privileged: true
+    devices:
+      - "/dev/kmsg"
 
   prometheus:
-    image: prom/prometheus
-    hostname: prometheus
     container_name: prometheus
+    image: prom/prometheus:latest
+    networks:
+      - monitoring
+    # volumes:
+    # - "prometheus-data:/prometheus"
+    # - "./prometheus.yml:/etc/prometheus/prometheus.yml"
+    # command:
+    # - "--config.file=/etc/prometheus/prometheus.yml"
+    # - "--storage.tsdb.path=/prometheus"
+    # - "--storage.tsdb.retention.time=200h"
+    # - "--web.enable-lifecycle"
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
     volumes:
-      - "/data/docker/volumes/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
-      - "/data/docker/volumes/prometheus/file_sd_configs.yml:/etc/prometheus/file_sd_configs.yml"
-    labels:
-      - "traefik.frontend.rule=Host:prometheus.homelab.fr"
+      - "./prometheus.yml:/etc/prometheus/prometheus.yml:ro"
+      # - "/data/docker/volumes/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro"
+    ports:
+      - "9090:9090"
 
-  prom_node_exporter:
-    image: prom/node-exporter
-    hostname: prom-node-exporter
-    container_name: prom-node-exporter
-    labels:
-      - "traefik.enable=false"
-
-  cadvisor:
-    image: google/cadvisor:latest
-    hostname: cadvisor
-    container_name: cadvisor
-    volumes:
-      - "/:/rootfs:ro"
-      - "/var/run:/var/run:rw"
-      - "/sys:/sys:ro"
-      - "/var/lib/docker/:/var/lib/docker:ro"
-    labels:
-      - "traefik.enable=false"
+    privileged: true
+    depends_on:
+      - cadvisor
+    logging:
+      driver: json-file
+      options:
+        max-size: "200m"
+        max-file: "10"
 
   grafana:
-    hostname: grafana
     container_name: grafana
-    image: grafana/grafana
+    image: grafana/grafana:latest
+    networks:
+      - monitoring
     environment:
-      - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-piechart-panel
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - DS_PROMETHEUS=prometheus
     volumes:
-      - /data/grafana:/var/lib/grafana
-    labels:
-      - "traefik.frontend.rule=Host:grafana.homelab.fr"
+      - "grafana-data:/var/lib/grafana"
+      - "./grafana-datasource-config.yaml:/etc/grafana/provisioning/datasources/datasources.yaml" # Chemin corrigé
+      - "./dashboards:/var/lib/grafana/dashboards" # Chemin corrigé
+      - "./default.yaml:/etc/grafana/provisioning/dashboards/default.yaml" # Chemin corrigé
+    privileged: true
+    depends_on:
+      - prometheus
+    logging:
+      driver: json-file
+      options:
+        max-size: "200m"
+        max-file: "10"
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      # - "./nginx.conf:/etc/nginx/nginx.conf" # Chemin corrigé
+      # - "./nginx.conf:/etc/nginx/sites-available/default.conf" # Chemin corrigé
+      - "./nginx.conf:/etc/nginx/sites-available/default" # Chemin corrigé
+      - "nginx-logs:/var/log/nginx"
+    ports:
+      - "9393:9090" # Exposition de Nginx pour Prometheus
+      - "3030:3000" # Exposition de Nginx pour Grafana
+    networks:
+      - monitoring
+    depends_on:
+      - prometheus
+      - grafana
+
+volumes:
+  grafana-data:
+  prometheus-data:
+  nginx-logs:
+
+networks:
+  monitoring:
+    driver: bridge
