--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,36 +1,19 @@
-# global:
-#   scrape_interval: 15s
-#   evaluation_interval: 15s #Evaluate rules every 15 seconds.
-
-# scrape_configs:
-#   - job_name: "prometheus"
-#     scrape_interval: 5s
-#     static_configs:
-#       - targets: ["localhost:9090"]
-
-#   # - job_name: "cadvisor"
-#   #   scrape_interval: 5s
-#   #   static_configs:
-#   #     - targets: ["cadvisor:8080"]
-
-#   # - job_name: "nginx"
-#   #   scrape_interval: 5s
-#   #   static_configs:
-#   #     - targets: ["nginx:80"]
-
 global:
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets:
-#       - alertmanager:9093
-rule_files:
-  # - "first_rules.yml"
-  # - "second_rules.yml"
+  scrape_interval: 15s
+  evaluation_interval: 15s #Evaluate rules every 15 seconds.
+
 scrape_configs:
   - job_name: "prometheus"
+    scrape_interval: 5s
     static_configs:
       - targets: ["localhost:9090"]
-    file_sd_configs:
-      - files:
-          - "/etc/prometheus/file_sd_configs.yml"
+
+  # - job_name: "cadvisor"
+  #   scrape_interval: 5s
+  #   static_configs:
+  #     - targets: ["cadvisor:8080"]
+
+  # - job_name: "nginx"
+  #   scrape_interval: 5s
+  #   static_configs:
+  #     - targets: ["nginx:80"]
