--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,9 +60,9 @@ services:
       - DS_PROMETHEUS=prometheus
     volumes:
       - "grafana-data:/var/lib/grafana"
-      - "./grafana-datasource-config.yaml:/etc/grafana/provisioning/datasources/datasources.yaml" # Chemin corrigé
-      - "./dashboards/:/var/lib/grafana/dashboards" # Chemin corrigé
-      - "./default.yaml:/etc/grafana/provisioning/dashboards/default.yaml" # Chemin corrigé
+      - "./grafana-datasource-config.yaml:/etc/grafana/provisioning/datasources/datasources.yaml:ro" # Chemin corrigé
+      - "./dashboards/:/var/lib/grafana/dashboards:ro" # Chemin corrigé
+      - "./default.yaml:/etc/grafana/provisioning/dashboards/default.yaml:ro" # Chemin corrigé
     privileged: true
     depends_on:
       - prometheus
