--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - "prometheus-data:/prometheus"
-      - "./prometheus.yml:/etc/prometheus/prometheus.yml"
+      - "prometheus-data:/prometheus:rw"
+      - "./prometheus.yml:/etc/prometheus/prometheus.yml:rw"
     depends_on:
       - cadvisor
     logging:
