--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,11 @@ services:
     volumes:
       - "prometheus-data:/prometheus:rw"
       - "./prometheus.yml:/prometheus/prometheus.yml:rw"
+    command:
+      - "--config.file=/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--storage.tsdb.retention.time=200h"
+      - "--web.enable-lifecycle"
     depends_on:
       - cadvisor
     logging:
