--- a/prometheus.yml
+++ b/prometheus.yml
@@ -11,7 +11,8 @@ scrape_configs:
   - job_name: "cadvisor"
     scrape_interval: 5s
     static_configs:
-      - targets: ["cadvisor:8080"]
+      # - targets: ["cadvisor:8080"]
+      - targets: ["localhost:8080"]
 
   # - job_name: "nginx"
   #   scrape_interval: 5s
