--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,6 +1,6 @@
 global:
   scrape_interval: 15s
-  evaluation_interval: 15s #Evaluate rules every 15 seconds.
+  # evaluation_interval: 15s #Evaluate rules every 15 seconds.
 
 scrape_configs:
   - job_name: "prometheus"
