--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - "prometheus-data:/prometheus:rw"
       - "./prometheus.yml:/prometheus/prometheus.yml:rw"
     command:
-      - "--config.file=/prometheus/prometheus.yml"
+      - "--config.file=/prometheus.yml"
       - "--storage.tsdb.path=/prometheus"
       - "--storage.tsdb.retention.time=200h"
       - "--web.enable-lifecycle"
