--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       - "prometheus-data:/prometheus:rw"
       - "./prometheus.yml:/prometheus/prometheus.yml:rw"
     command:
-      - "--config.file=/prometheus.yml"
-      - "--storage.tsdb.path=/prometheus"
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/etc/prometheus"
       - "--storage.tsdb.retention.time=200h"
       - "--web.enable-lifecycle"
     depends_on:
