--- a/prometheus.yml
+++ b/prometheus.yml
@@ -12,7 +12,7 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       # - targets: ["cadvisor:8080"]
-      - targets: ["localhost:8080"]
+      - targets: ["grafana_bundle_ligth-cadvisor:8080"]
 
   # - job_name: "nginx"
   #   scrape_interval: 5s
