--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,10 @@ services:
     devices:
       - "/dev/kmsg"
     ports:
-      - 8080:8080
+      - 8081:8080
     networks:
       - back-tier
-    restart: always
+    # restart: always
     deploy:
       mode: global
 
